--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <script>
             var meting_api='https://meting-api.lihaoyu.cn/api?server=:server&type=:type&id=:id&auth=:auth&r=:r';
         </script>
+        <script defer src="/_vercel/insights/script.js"></script>
     </head>
     <body>
         <fluent-card>
