🐞 fix(analytics): waline comment

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                 <p>如果愿意进行留言，请务必遵守<a href="/tos.html">「使用守则」</a>。</p>
                 <a href="https://dtxd-comment.lihaoyu.cn/ui" target="_blank"><fluent-button appearance="accent">注册账号</fluent-button></a>
                 <h2>统计信息</h2>
-                <p>页面浏览量: <span class="waline-pageview-count" data-path="</>"/></p>
-                <p>留言数量：<span class="waline-comment-count" data-path="/index.html"/></p>
+                <p>
+                    页面浏览量: <b><span class="waline-pageview-count" /></b></br>
+                    留言数量：<b><span class="waline-comment-count" /></b>
+                </p>
                 <h2>关于</h2>
                 <p><b>Proudly powered by Waline, Fluent UI, Vercel. Built with ❤️ heart, ✨ stars & 🐛 bugs.</b></p>
             </div>
